<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="@string/btnlinearlayoutdos">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#2196F3"
        android:text="@string/segund" />


    <Button
        android:id="@+id/button5"
        android:layout_width="176dp"
        android:layout_height="58dp"
        android:text="@string/btnlinearlayoutcuatro"
        android:translationX="20dp"
        android:translationY="300dp" />



    <Button
        android:id="@+id/button6"
        android:layout_width="171dp"
        android:layout_height="61dp"
        android:layout_marginStart="43dp"
        android:layout_toEndOf="@id/button5"
        android:text="@string/btnlinearlayoutcinco"

        android:translationY="300dp" />

    <EditText
        android:id="@+id/editTextTextPassword4"
        android:layout_width="338dp"
        android:layout_height="56dp"
        android:ems="10"
        android:inputType="textPassword"
        android:translationX="50dp"
        android:translationY="190dp" />

</RelativeLayout>
