<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#983C35"
    tools:context=".LinearLayout">

    <!-- TODO: Update blank fragment layout -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        tools:context=".MainActivity">

        <!-- LinearLayout Vertical -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <!-- Tres Botones en LinearLayout Vertical -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <Button

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btnlinearlayoutuno" />

                <Button
                    android:id="@+id/btnlinearlayoutdos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/btnlinearlayoutdos" />

                <Button
                    android:id="@+id/btnlinearlayouttres"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/btnlinearlayouttres" />
            </LinearLayout>

            <!-- Separador -->
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:background="#000000" />

            <!-- Tres Botones en LinearLayout Horizontal -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnlinearlayoutcuatro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btnlinearlayoutcuatro" />

                <Button
                    android:id="@+id/btnlinearlayoutcinco"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/btnlinearlayoutcinco" />

                <Button
                    android:id="@+id/btnlinearlayoutseis"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/btnlinearlayoutseis" />
            </LinearLayout>

        </LinearLayout>
    </FrameLayout>

    <TextView
        android:id="@+id/btnlinearlayoutuno"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/primero" />

</FrameLayout>